# AI-Patcher-Pro

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
ai_patcher_pro/: __init__.py  __main__.py
ai_patcher_pro/core/: __init__.py  ai_report.py  backup.py  command_executor.py  command_utils.py  gpt_context.py  json_parser.py  patcher.py  processor.py  scanner.py  search.py  security.py  workflow.py
ai_patcher_pro/gui/: __init__.py  backup_dialog.py  code_viewer.py  main_window.py  operation_card.py  scanner_tab.py  styles.py
ai_patcher_pro/utils/: __init__.py  file_io.py
docs/: AI_PATCHER_STABILITY_CHECKPOINT.md
tests/: __init__.py  test_ai_report.py  test_command_executor.py  test_gpt_context.py  test_json_parser.py  test_json_parser_robust.py  test_main_window_command_only.py  test_main_window_layout.py  test_patcher.py  test_scanner.py  test_scanner_tab.py  test_search.py  test_security.py  test_workflow.py  test_workflow_command_only_marker.py
